# buffio

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  \  buffio.hpp  buffioQueue.hpp  buffioclock.hpp  buffiocommon.hpp  buffioenum.hpp  buffiofd.hpp  buffiolfqueue.hpp  buffiolog.hpp  buffiomemory.hpp  buffiooperator.hpp  buffiopromise.hpp  buffioqueue.hpp  buffioschedular.hpp  buffioservertest  buffiosock.hpp  buffiosockbroker.hpp  buffiothread.hpp  main.cpp
doc/: buffio.odg
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  buffioQueue_8hpp.html  buffioQueue_8hpp_source.html  buffio_8hpp_source.html  buffioclock_8hpp_source.html  buffiocommon_8hpp_source.html  buffioenum_8hpp_source.html  buffiofd_8hpp.html  buffiofd_8hpp.js  buffiofd_8hpp_source.html  buffiolfqueue_8hpp_source.html  buffiolog_8hpp_source.html  buffiomemory_8hpp.html  buffiomemory_8hpp_source.html  buffiopromise_8hpp_source.html  buffioschedular_8hpp.html  buffioschedular_8hpp.js  buffioschedular_8hpp_source.html  buffiosockbroker_8hpp_source.html  buffiothread_8hpp_source.html  classblockQueue.html  classblockQueue.js  classbuffioClock.html  classbuffioFd-members.html  classbuffioFd.html  classbuffioFdPool-members.html  classbuffioFdPool.html  classbuffioFdPool.js  classbuffioMakeFd-members.html  classbuffioMakeFd.html  classbuffioMemory.html  classbuffioMemoryPool-members.html  classbuffioMemoryPool.html  classbuffioQueue-members.html  classbuffioQueue.html  classbuffioQueue.js  classbuffioScheduler-members.html  classbuffioScheduler.html  classbuffioScheduler.js  (+36 more)
examples/: async_echo_example.cpp  async_example.cpp  connect_example.cpp  echo_server_example.cpp  echo_write_example.cpp  file_read_example.cpp  flow_example.cpp  hello_world.cpp  thread_clamper_example.cpp  yield_example.cpp
html/: annotated_dup.js  buffioQueue_8hpp.html  buffioQueue_8hpp.js  buffioQueue_8hpp_source.html  buffio_8hpp_source.html  buffioclock_8hpp_source.html  buffiocommon_8hpp_source.html  buffioenum_8hpp_source.html  buffiofd_8hpp.html  buffiofd_8hpp_source.html  buffiolfqueue_8hpp_source.html  buffiolog_8hpp_source.html  buffiomemory_8hpp.html  buffiomemory_8hpp.js  buffiomemory_8hpp_source.html  buffiopromise_8hpp_source.html  buffioschedular_8hpp.html  buffioschedular_8hpp_source.html  buffiosockbroker_8hpp_source.html  buffiothread_8hpp_source.html  classblockQueue-members.html  classblockQueue.html  classbuffioClock-members.html  classbuffioClock.html  classbuffioFd.html  classbuffioFd.js  classbuffioFdPool-members.html  classbuffioFdPool.html  classbuffioMakeFd-members.html  classbuffioMakeFd.html  classbuffioMemoryPool-members.html  classbuffioMemoryPool.html  classbuffioMemoryPool.js  classbuffioQueue.html  classbuffioScheduler.html  classbuffioSignalHandler-members.html  classbuffioSignalHandler.html  classbuffioSockBroker-members.html  classbuffioSockBroker.html  classbuffioThread-members.html  (+26 more)
html/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  classes_2.js  enums_0.js  functions_0.js  functions_1.js  functions_5.js  functions_7.js  functions_8.js  functions_b.js  functions_d.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_1.js  variables_4.js
include/buffio/: Queue.hpp  actions.hpp  clock.hpp  common.hpp  container.hpp  coroutine.hpp  enum.hpp  fd.hpp  fiber.hpp  flow.hpp  lfcore.hpp  (+6 more)
private/: buffiomux.hpp
src/: actions.cpp  clock.cpp  container.cpp  fd.cpp  fiber.cpp  flow.cpp  lfcore.cpp  memory.cpp  promise.cpp  queue.cpp  scheduler.cpp  sockbroker.cpp  thread.cpp
tests/: CMakeLists.txt  test_queue.cpp  test_schedular.cpp
(+44 files in other folders)
